--- a/src/main/resources/templates/greeting/greeting.html
+++ b/src/main/resources/templates/greeting/greeting.html
@@ -5,6 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+<h1>Greeting</h1>
 <p th:text="'Hello, ' + ${name} + '!'" />
 </body>
 </html>
