--- a/spring-example-greeting/src/main/resources/templates/greeting/greeting.html
+++ b/spring-example-greeting/src/main/resources/templates/greeting/greeting.html
@@ -1,11 +1,11 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Greeting</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta charset="UTF-8">
 </head>
 <body>
 <h1>Greeting</h1>
-<p th:text="'Hello, ' + ${name} + '!'" />
+<p th:text="'Hello, ' + ${name} + '!'">
 </body>
 </html>
