--- a/spring-example-person/src/main/resources/templates/person/form.html
+++ b/spring-example-person/src/main/resources/templates/person/form.html
@@ -1,17 +1,21 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+  <title>Person Form</title>
+  <meta charset="UTF-8">
+</head>
 <body>
-<h1>Person</h1>
-<form method="post" action="#" th:action="@{/person}" th:object="${personForm}">
+<h1>Person Form</h1>
+<form action="#" th:action="@{/person}" th:object="${personForm}" method="post">
   <table>
     <tr>
       <td>Name:</td>
-      <td><input type="text" th:field="*{name}" /></td>
+      <td><input type="text" th:field="*{name}"></td>
       <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
     </tr>
     <tr>
       <td>Age:</td>
-      <td><input type="text" th:field="*{age}" /></td>
+      <td><input type="text" th:field="*{age}"></td>
       <td th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age Error</td>
     </tr>
     <tr>
